# kma_rustlang_course_2024_Ivan_Markhaichuk

./: README.md
1_crates.io_and_docs.rs/: README.md
1_hello_training/: README.md
1_playground/: README.md
2_git_install/: README.md
2_hello_cargo/: README.md
2_hello_world/: Cargo.toml  README.md
2_hello_world/src/: 0_my_struct.rs  10_my_function_mut.rs  11_my_function_mut_2.rs  12_my_function_mut_3.rs  13_my_function_mut_4.rs  1_my_function.rs  2_my_variable_moved.rs  3_my_variable_moved.rs  4_my_variable_cloned.rs  5_my_ref.rs  6_my_variable_copied.rs  7_my_variable_copied_2.rs  8_my_variable_mut.rs  9_my_variable_mut_2.rs
2_rust_install/: README.md
2_rustlings_first_steps/: README.md
3_first_crate_parser_stage_1/: README.md
3_first_crate_parser_stage_1/my_parser_kma_group_1/: Cargo.toml  Readme.md
3_first_crate_parser_stage_1/my_parser_kma_group_1/src/: lib.rs  main.rs
4_parser_prototype/: README.md
5_unit_tests/: README.md
6_serde/: README.md
rustlings/: Cargo.toml  README.md  temp_12808_ThreadId1  temp_815_ThreadId1  temp_91564_ThreadId1
rustlings/exercises/: quiz1.rs  quiz4.rs
rustlings/exercises/advanced_errors/: advanced_errs1.rs  advanced_errs2.rs
rustlings/exercises/clippy/: clippy1.rs
rustlings/exercises/collections/: README.md  hashmap1.rs  vec2.rs
rustlings/exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs  using_as.rs
rustlings/exercises/enums/: README.md  enums3.rs
rustlings/exercises/error_handling/: README.md  errors1.rs  errors4.rs  errors6.rs
rustlings/exercises/functions/: README.md  (+1 more)
(+30 files in other folders)
