[package]
name = "first_steps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "0"
path = "src/0_my_struct.rs"

[[example]]
name = "1"
path = "src/1_my_function.rs"

[[example]]
name = "2"
path = "src/2_my_variable_moved.rs"

[[example]]
name = "3"
path = "src/3_my_variable_moved.rs"

[[example]]
name = "4"
path = "src/4_my_variable_cloned.rs"

[[example]]
name = "5"
path = "src/5_my_ref.rs"

[[example]]
name = "6"
path = "src/6_my_variable_copied.rs"

[[example]]
name = "7"
path = "src/7_my_variable_copied_2.rs"

[[example]]
name = "8"
path = "src/8_my_variable_mut.rs"

[[example]]
name = "9"
path = "src/9_my_variable_mut_2.rs"

[[example]]
name = "10"
path = "src/10_my_function_mut.rs"

[[example]]
name = "11"
path = "src/11_my_function_mut_2.rs"

[[example]]
name = "12"
path = "src/12_my_function_mut_3.rs"

[[example]]
name = "13"
path = "src/13_my_function_mut_4.rs"
